prometheus/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.51.2
spec:
  rules:
    - host: grafana.linux88.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: alertmanager.linux88.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
    - host: prometheus.linux88.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
